--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,6 +58,7 @@
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "files.associations": {
     "*.java": "java",
-    "xutility": "cpp"
+    "xutility": "cpp",
+    "iostream": "cpp"
   }
 }
