--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,6 +59,7 @@
   "files.associations": {
     "*.java": "java",
     "xutility": "cpp",
-    "iostream": "cpp"
+    "iostream": "cpp",
+    "xstring": "cpp"
   }
 }
